--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <i class="fa fa-bars" onclick="showMenu()"></i>
             </nav>
             <div class="text-box">
-                <h1>Shri Ramdeobaba College of Engineering and Management</h1>
+                <h1>Galgotias University</h1>
                 <p>
                     RCOEM is one of the best engineering college in Nagpur, Maharashtra with AN ISO 9001:2015<br> certified Institution. NAAC ACCREDITED with 'A' Grade.
                 </p>
